--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -6,6 +6,7 @@
   }
 }
 
+
 .contacts__inner-wrap {
   @include container;
   margin: 0 auto;
@@ -14,7 +15,6 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
   justify-content: space-between;
-
   background-color: $bg-basic-color;
 
   @media (min-width: $tablet-width) {
@@ -27,6 +27,14 @@
     margin-inline: unset;
     grid-column: 2/3;
     grid-row: 2/3;
+  }
+}
+
+.contacts__inner-wrap--with-bg {
+  background-color: $bg-primary-color;
+
+  @media (min-width: $desktop-width) {
+    background-color: $bg-basic-color;
   }
 }
 
