--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,17 +1,17 @@
 .product {
   display: grid;
-  grid-template-areas: "title title", "count price", "button button";
+  grid-template-areas: "title title" "count price" "button button";
   gap: 15px;
   align-items: center;
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: auto auto 25px;
-    grid-template-areas: "title count price", "button button button";
+    grid-template-columns: auto auto 68px;
+    grid-template-areas: "title count price" "button button button";
     gap: 25px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 1fr 1fr auto 245px;
+    grid-template-columns: 285px 1fr minmax(42px, auto) 245px;
     grid-template-areas: "title count price button";
     gap: 40px;
   }
@@ -32,6 +32,7 @@
 }
 
 .product__count {
+  margin: 0;
   grid-area: count;
   font-family: $font-secondary;
   font-size: 14px;
@@ -40,22 +41,24 @@
   color: $text-secondary-color;
 
   @media (min-width: $tablet-width) {
+    text-align: right;
     font-size: 16px;
     line-height: 20px;
   }
 
-  // @media (min-width: $desktop-width) {
-  //   text-align: right;
-  // }
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
 }
 
 .product__price {
+  margin: 0;
   grid-area: price;
   font-family: $font-secondary;
   font-size: 14px;
   font-weight: 400;
   line-height: 1em;
-  // text-align: right;
+  text-align: right;
   color: $text-secondary-color;
 
   @media (min-width: $tablet-width) {
@@ -70,4 +73,9 @@
 
 .product__button {
   grid-area: button;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
