--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,5 +1,14 @@
-// .subscribe {
-// }
+.subscribe {
+  padding: 40px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 80px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 96px 0 104px;
+  }
+}
 
 // .subscribe__title {
 // }
