--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,4 +1,6 @@
 .contacts {
+  background-color: $bg-basic-color;
+
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr $content-width-desktop 1fr;
@@ -6,6 +8,13 @@
   }
 }
 
+.contacts--with-bg {
+  background-color: $bg-primary-color;
+
+  @media (min-width: $desktop-width) {
+    background-color: $bg-basic-color;
+  }
+}
 
 .contacts__inner-wrap {
   @include container;
@@ -15,7 +24,8 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
   justify-content: space-between;
-  background-color: $bg-basic-color;
+  background-color: inherit;
+  z-index: 2;
 
   @media (min-width: $tablet-width) {
     padding: 60px 40px;
@@ -30,13 +40,6 @@
   }
 }
 
-.contacts__inner-wrap--with-bg {
-  background-color: $bg-primary-color;
-
-  @media (min-width: $desktop-width) {
-    background-color: $bg-basic-color;
-  }
-}
 
 .contacts__title {
   grid-column: 1/2;
@@ -44,8 +47,14 @@
   margin: 0;
   font-size: 16px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 1.25em;
   text-transform: uppercase;
+  align-self: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1.3em;
+  }
 }
 
 .contacts__address {
@@ -59,6 +68,8 @@
 
   @media (min-width: $tablet-width) {
     text-align: right;
+    font-size: 16px;
+    line-height: 1.25em;
 
     & + & {
       margin-top: 19px;
@@ -73,7 +84,6 @@
 .contacts__map {
   grid-column: 1/-1;
   grid-row: 1/-1;
-  z-index: -1;
   height: 362px;
 
   @media (min-width: $tablet-width) {
