--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,14 +1,8 @@
 .main-header {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
-  // display: grid;
-  // grid-template-columns: 1fr $content-width-mobile 1fr;
-  // grid-template-rows: auto auto auto;
-
-  // @media (min-width: $tablet-width) {
-  //   grid-template-columns: 1fr $content-width-tablet 1fr;
-  // }
-  padding: 13px 0;
+  padding: 13px 0 0;
 
   @media (min-width: $tablet-width) {
     padding: 25px 0;
@@ -31,8 +25,7 @@
 .main-header__logo {
   display: grid;
   grid-template-columns: 1fr auto;
-  // padding: 13px 0 15px;
-  // grid-column: 2/3;
+  padding-bottom: 13px;
 
   width: $content-width-mobile;
   margin-left: auto;
@@ -49,6 +42,7 @@
 
   @media (min-width: $tablet-width) {
     width: unset;
+    padding-bottom: 0;
     margin: 0;
   }
 }
@@ -57,15 +51,19 @@
   width: 100%;
   flex-shrink: 0;
   align-self: center;
-  // grid-column: 1/-1;
+  display: none;
+
+  .main-header--nojs & {
+    display: block;
+  }
 
   @media (min-width: $tablet-width) {
+    display: block;
     flex-shrink: 1;
     max-width: 500px;
     width: unset;
     margin-left: auto;
     margin-right: -10px;
-    // grid-column: unset;
   }
 
   @media (min-width: $desktop-width) {
@@ -73,10 +71,24 @@
   }
 }
 
+.main-header__nav--open {
+  display: block;
+
+  .main-header--nojs & {
+    position: static;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    position: absolute;
+    top: 64px;
+    left: 0;
+    right: 0;
+    background-color: $bg-basic-color;
+  }
+}
 
 .main-header__menu-toggle {
   display: block;
-  // grid-column: 3/4;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -121,13 +133,5 @@
   }
 }
 
-.main-header__nav-link {
-  @media (max-width: ($tablet-width - 1)) {
-    max-width: $content-width-mobile;
-    margin: 0 auto;
-  }
-}
-
 // .index-header__hero {
-//   // grid-column: 1/-1;
 // }
