Добавляет прижатие подвала к низу страницы

--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -8,4 +8,7 @@
   line-height: 18px;
   color: $text-color;
   background-color: $bg-basic-color;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
