--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -21,7 +21,7 @@ $main-nav-separate-border: 1px solid #e6e6e6;
 .main-nav__item {
   border-top: $main-nav-separate-border;
 
-  &:last-of-type {
+  &:where(:last-of-type) {
     border-bottom: $main-nav-separate-border;
   }
 
