--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -82,12 +82,16 @@
 }
 
 .contacts__map {
-  grid-column: 1/-1;
-  grid-row: 1/-1;
   height: 362px;
 
   @media (min-width: $tablet-width) {
     min-height: 400px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 100%;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
   }
 }
 
