--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -55,7 +55,6 @@ $catalog-separator-color:#cdcdcd;
   }
 }
 
-
 .catalog-extra__promotion {
   background-color: rgba($bg-secondary-color, 0.85);
   background-image: linear-gradient(rgba($bg-secondary-color, 0.85), rgba($bg-secondary-color, 0.85)), url("../../images/promotion_cat_background-mobile@1x.jpg");
@@ -72,15 +71,14 @@ $catalog-separator-color:#cdcdcd;
   @media (min-width: $desktop-width) {
     width: 245px;
     min-height: 288px;
+    flex-shrink: 1;
   }
 }
 
 .catalog-extra__promotion-text {
   margin: 0;
-  padding: 43px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 42px;
+
   font-family: $font-secondary;
   font-size: 16px;
   font-weight: 400;
@@ -90,15 +88,18 @@ $catalog-separator-color:#cdcdcd;
 
   &::before {
     @include icon(78px,81px,"gift");
-    margin-top: 15px;
-    margin-bottom: 48px;
+    margin: 15px auto  48px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-max) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     text-align: left;
-  }
+    height: 100%;
 
-  @media (min-width: $desktop-width) {
-    text-align: center;
+    &::before {
+      margin: 0;
+    }
   }
 }
