--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -42,10 +42,11 @@
     grid-template-columns: 1fr 240px;
     grid-template-rows: repeat(3, auto);
     padding: 77px 63px 53px 52px;
-    gap: 24px 0;
+    gap: 24px 10px;
   }
 
   @media (min-width: $desktop-width) {
+    grid-template-columns: 152px 1fr;
     padding: 47px 52px 55px;
     max-width: 570px;
   }
@@ -67,15 +68,20 @@
 
 .category__item--heavy::before {
   @include icon(67px, 53px, "heavy");
+  margin-left: -8px;
 
   @media (min-width: $tablet-width) {
     width: 268px;
     height: 200px;
+    margin-left: 0;
+    margin-right: -34px;
   }
 
   @media (min-width: $desktop-width) {
     width: 134px;
     height: 100px;
+    margin-left: -15px;
+    margin-right: 0;
   }
 }
 
