--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -6,15 +6,13 @@ $main-nav-separate-border: 1px solid #e6e6e6;
 
 .main-nav__list {
   @include list();
-  display: flex;
-  flex-flow: column wrap;
-  align-items: stretch;
-  gap: 0 13px;
   color: inherit;
 
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0 13px;
     align-items: center;
-    flex-direction: row;
   }
 }
 
@@ -77,5 +75,11 @@ $main-nav-separate-border: 1px solid #e6e6e6;
     left: var(--padding);
     right: var(--padding);
     background-color: $bg-secondary-color;
+  }
+}
+
+.main-nav__link--current-with-bg::after {
+  @media (min-width: $desktop-width) {
+    background-color: currentColor;
   }
 }
