--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -25,7 +25,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    gap: 37px max(10px, ($content-width-desktop - 245px*4 - 1)/4);
+    gap: 37px 80px;
   }
 }
 
@@ -74,6 +74,7 @@
     flex-shrink: 0;
     flex-direction: column;
     align-items: flex-start;
+    gap: 27px;
   }
 
   @media (min-width: $desktop-width) {
