--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -35,6 +35,7 @@
     width: 565px;
     padding-inline: 80px;
     margin-inline: unset;
+    grid-template-columns: 1fr 160px;
     grid-column: 2/3;
     grid-row: 2/3;
   }
