--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -13,6 +13,7 @@ $main-nav-separate-border: 1px solid #e6e6e6;
     flex-flow: row wrap;
     gap: 0 13px;
     align-items: center;
+    justify-content: end;
   }
 }
 
