--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -105,7 +105,8 @@ $card-separator-color: #cdcdcd;
   }
 }
 
-.product-card__title--icon-plus {
+.product-card__title--more {
+  text-align: center;
   color: $card-title-secondary-color;
 }
 
