--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -19,7 +19,7 @@ $hero-left-margin-desktop: 80px;
     z-index: -1;
     background: linear-gradient($hero-bg-secondary-color, $hero-bg-secondary-color), var(--image), linear-gradient(to bottom left, #3f3e43, #525157);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center bottom;
 
     @media (min-width: $tablet-width) {
       grid-area: none;
@@ -41,13 +41,16 @@ $hero-left-margin-desktop: 80px;
   @media (min-width: $desktop-width) {
     $columns: 8;
     grid-template-columns: 1fr repeat($columns, calc($content-width-desktop / $columns)) 1fr;
-    grid-template-rows: auto minmax(10px, auto) 1fr;
+    grid-template-rows: auto auto 1fr;
+    // grid-template-rows: minmax(10px, auto) minmax(10px, auto) minmax(10px, auto);
+    min-height: 694px;
   }
 }
 
 .index-header__main-header {
   grid-column: 1/-1;
   grid-row: 1/2;
+  border: none;
 
   @media (min-width: $tablet-width) {
     grid-column: 2/-2;
@@ -91,7 +94,7 @@ $hero-left-margin-desktop: 80px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 90px 0 40px;
+    padding: 83px 0 40px;
   }
 }
 
@@ -126,14 +129,13 @@ $hero-left-margin-desktop: 80px;
   @media (min-width: $tablet-width) {
     grid-row: 3/4;
     place-self: start start;
-    margin-top: 29px;
+    margin-top: 21px;
     margin-left: $hero-left-margin-tablet;
-    padding-inline: 26px;
+    padding: 14px 26px;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 2/5;
-    margin-top: unset;
     margin-left: $hero-left-margin-desktop;
   }
 }
