--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -2,15 +2,28 @@
   position: relative;
   padding: 13px 0 0;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: flex-start;
+  border-bottom: 1px solid #d9d9d9;
+
+  @media (max-width: $mobile-width-max) {
+    &.main-header--nojs {
+      border-bottom: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
+    flex-direction: row;
     padding: 25px 0;
+    width: $content-width-tablet;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: none;
   }
 
   @media (min-width: $desktop-width) {
     padding: 55px 0 30px;
+    width: $content-width-desktop;
   }
 }
 
@@ -43,20 +56,23 @@
 .main-header__nav {
   width: 100%;
   flex-shrink: 0;
-  align-self: center;
+  // align-self: center;
   display: none;
 
-  .main-header--nojs & {
-    display: block;
+  @media (max-width: $mobile-width-max) {
+    .main-header--nojs & {
+      display: block;
+    }
   }
 
   @media (min-width: $tablet-width) {
     display: block;
+    padding-top: 5px;
     flex-shrink: 1;
     max-width: 500px;
     width: unset;
     margin-left: auto;
-    margin-right: -10px;
+    margin-right: -7px;
   }
 
   @media (min-width: $desktop-width) {
@@ -67,20 +83,17 @@
 .main-header__nav--open {
   display: block;
 
-  .main-header--nojs & {
-    position: static;
-    width: auto;
-  }
-
   @media (max-width: $mobile-width-max) {
     position: absolute;
     top: 64px;
-    // left: 0;
-    // right: 0;
+    left: 0;
+    right: 0;
     background-color: $bg-basic-color;
-    left: 50%;
-    width: 100vw;
-    transform: translateX(-50%);
+
+    .main-header--nojs & {
+      position: static;
+      width: 100%;
+    }
   }
 }
 
@@ -90,9 +103,11 @@
   border: none;
   cursor: pointer;
 
-  .main-header--nojs & {
-    opacity: 0;
-    pointer-events: none;
+  @media (max-width: $mobile-width-max) {
+    .main-header--nojs & {
+      opacity: 0;
+      pointer-events: none;
+    }
   }
 
   &::before {
