Добавляет фоновые изображения, декор для подзаголовков. Подгоняет под пиксель-перфект

--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -3,6 +3,7 @@ $footer-element-separator: 1px solid $separator-color;
 
 .main-footer {
   background-color: $bg-primary-color;
+  padding-top: 16px;
 }
 
 .main-footer__container {
