--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -99,6 +99,7 @@
 
 .main-header__menu-toggle {
   display: block;
+  margin-right: -5px;
   background-color: transparent;
   border: none;
   cursor: pointer;
