--- a/source/styles/blocks/catalog-extra.scss
+++ b/source/styles/blocks/catalog-extra.scss
@@ -1,11 +1,20 @@
 $catalog-separator-color:#cdcdcd;
 
-// .catalog-extra {
-// }
+.catalog-extra {
+  padding: 10px 0;
 
-// .catalog-extra__title {
+  @media (min-width: $tablet-width) {
+    padding: 40px 0;
+  }
+}
 
-// }
+.catalog-extra__title {
+  margin: 15px auto 25px 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 32px auto 80px 0;
+  }
+}
 
 .catalog-extra__inner-wrap {
   display: flex;
@@ -35,7 +44,7 @@ $catalog-separator-color:#cdcdcd;
 
 .catalog-extra__item {
   border-top: 1px solid $catalog-separator-color;
-  padding: 13px 0 19px;
+  padding: 13px 0 18px;
 
   &:last-of-type {
     border-bottom: 1px solid $catalog-separator-color;
@@ -55,9 +64,26 @@ $catalog-separator-color:#cdcdcd;
   }
 }
 
+@mixin catalog-extra-bg-image($device) {
+  $image: "../../images/promotion_cat_background-"+$device;
+
+  background-image:
+    linear-gradient(rgba($bg-secondary-color, 0.85),
+    rgba($bg-secondary-color, 0.85)),
+    image-set(
+      url($image+"@1x.webp") type("image/webp") 1x,
+      url($image+"@2x.webp") type("image/webp") 2x,
+      url($image+"@1x.jpg") type("image/jpeg") 1x,
+      url($image+"@2x.jpg") type("image/jpeg") 2x
+    );
+}
+
 .catalog-extra__promotion {
-  background-color: rgba($bg-secondary-color, 0.85);
-  background-image: linear-gradient(rgba($bg-secondary-color, 0.85), rgba($bg-secondary-color, 0.85)), url("../../images/promotion_cat_background-mobile@1x.jpg");
+  @include catalog-extra-bg-image("mobile");
+  /* background-image:
+    linear-gradient(rgba($bg-secondary-color, 0.85),
+    rgba($bg-secondary-color, 0.85)),
+    url("../../images/promotion_cat_background-mobile@1x.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -65,10 +91,12 @@ $catalog-separator-color:#cdcdcd;
   min-height: 290px;
 
   @media (min-width: $tablet-width) {
+    @include catalog-extra-bg-image("tablet");
     min-height: 200px;
   }
 
   @media (min-width: $desktop-width) {
+    @include catalog-extra-bg-image("desktop");
     width: 245px;
     min-height: 288px;
     flex-shrink: 1;
