--- a/source/styles/blocks/index-header.scss
+++ b/source/styles/blocks/index-header.scss
@@ -2,6 +2,24 @@ $hero-bg-secondary-color: rgba($bg-secondary-color, 0.85);
 $hero-left-margin-tablet: 90px;
 $hero-left-margin-desktop: 80px;
 
+@mixin index-bg-image($device) {
+  $image: "../../images/hero-background-"+$device;
+  $underground:linear-gradient(to bottom left, #3f3e43, #525157);
+
+  @if ($device=="desktop") {
+    $underground:linear-gradient(#3d3c41, #3d3c41);
+  }
+  background-image:
+    linear-gradient($hero-bg-secondary-color, $hero-bg-secondary-color),
+    image-set(
+      url($image+"@1x.webp") type("image/webp") 1x,
+      url($image+"@2x.webp") type("image/webp") 2x,
+      url($image+"@1x.jpg") type("image/jpeg") 1x,
+      url($image+"@2x.jpg") type("image/jpeg") 2x
+    ),
+    $underground;
+}
+
 .index-header {
   display: grid;
   grid-template-columns: 1fr $content-width-mobile 1fr;
@@ -12,12 +30,12 @@ $hero-left-margin-desktop: 80px;
   }
 
   &::after {
-    --image: url("../../images/hero-background-mobile@1x.jpg");
+    @include index-bg-image("mobile");
     content: "";
     grid-row: 2/4;
     grid-column: 1/-1;
     z-index: -1;
-    background: linear-gradient($hero-bg-secondary-color, $hero-bg-secondary-color), var(--image), linear-gradient(to bottom left, #3f3e43, #525157);
+
     background-repeat: no-repeat;
     background-position: center bottom;
 
@@ -26,7 +44,7 @@ $hero-left-margin-desktop: 80px;
     }
 
     @media (min-width: $desktop-width) {
-      --image: url("../../images/hero-background-desktop@1x.jpg");
+      @include index-bg-image("desktop");
       grid-row: 1/-1;
       grid-column: 6/-1;
       background-position: left bottom;
