--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -37,13 +37,14 @@ $card-separator-color: #cdcdcd;
   &::before {
     @include icon(30px,30px,"plus");
     place-self: center;
-    margin-bottom: 23px;
+    margin-bottom: 24px;
+    margin-top: 3px;
 
     @media (min-width: $tablet-width) {
       width: 60px;
       height: 60px;
       margin-top: 50px;
-      margin-bottom: 50px;
+      margin-bottom: 33px;
     }
 
     @media (min-width: $desktop-width) {
