--- a/source/styles/blocks/category.scss
+++ b/source/styles/blocks/category.scss
@@ -26,9 +26,9 @@
   display: grid;
   grid-template-columns: 70px 1fr;
   gap: 22px 0;
-  padding: 21px 20px 18px;
+  padding: 21px 20px;
   background-color: $bg-primary-color;
-  align-items: center;
+  // align-items: center;
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-max) {
     &::before {
@@ -41,7 +41,7 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 240px;
     grid-template-rows: repeat(3, auto);
-    padding: 77px 63px 53px 52px;
+    padding: 77px 63px 59px 52px;
     gap: 24px 10px;
   }
 
@@ -54,7 +54,7 @@
 }
 
 .category__item--slim::before {
-  @include icon(67px, 53px, "slim");
+  @include icon(53px, 53px, "slim");
 
   @media (min-width: $tablet-width) {
     width: 200px;
@@ -77,6 +77,7 @@
     height: 200px;
     margin-left: 0;
     margin-right: -34px;
+    align-self: center;
   }
 
   @media (min-width: $desktop-width) {
@@ -113,6 +114,11 @@
 
   @media (min-width: $tablet-width) {
     color: $text-color;
+
+    padding-bottom: 6px;
+  }
+
+  @media (min-width: $desktop-width) {
     padding-top: 30px;
   }
 }
@@ -158,5 +164,9 @@
     font-size: 20px;
     line-height: 1.5em;
     border: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 13px;
   }
 }
