--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -8,6 +8,7 @@
 
   @media (min-width: $tablet-width) {
     line-height: 1em;
+    padding-bottom: 30px;
   }
 }
 
@@ -34,7 +35,6 @@
   @include text();
   position: relative;
   display: flex;
-  // flex-flow: row wrap;
   gap: 20px;
   align-items: center;
   color: $text-secondary-color;
@@ -75,7 +75,7 @@
     flex-shrink: 0;
     flex-direction: column;
     align-items: flex-start;
-    gap: 27px;
+    gap: 30px;
   }
 
   @media (min-width: $desktop-width) {
