--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -109,6 +109,7 @@ $card-separator-color: #cdcdcd;
 .product-card__title--more {
   text-align: center;
   color: $card-title-secondary-color;
+  padding-inline: 35px;
 }
 
 .product-card__desc {
