--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,21 +1,28 @@
 .subscribe {
-  padding: 40px 0;
+  padding: 10px 0 30px;
+
 
   @media (min-width: $tablet-width) {
-    padding: 80px 0;
+    padding: 25px 0 70px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 96px 0 104px;
+    padding: 40px 0 90px;
   }
 }
 
 .subscribe__title {
-  margin-bottom: 8px;
+  margin-top: 14px;
+  margin-bottom: 10px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: 14px;
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 14px;
+    margin-bottom: 50px;
   }
 }
 
@@ -39,6 +46,7 @@
   flex-flow: column wrap;
   gap: 16px 0;
   justify-content: center;
+  margin-bottom: 10px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -46,6 +54,8 @@
 }
 
 .subscribe__form-input {
+  padding: 12px;
+
   @media (min-width: $tablet-width) {
     min-width: 376px;
   }
