Модуль 6. Адаптивные сетки (#12)
* Начинает верстку адаптивных сеток для главной страницы

* Исправляет опечатку в имени элемента БЭМ-блока

* Добавляет переменную для брейкпойнтов. Добавляет адаптивные сетки на страницу каталога

* Стилизует шапку. Стилизует каталог

* Стилизует слайдер

* Добавляет класc и миксин контейнера

* Дорабатывает шапку

* Правит подвал. 

* Обнуляет отсnупы у заголовков

* Добавляет классы для главного меню

* Добавляет прижатие подвала к низу страницы

* Добавляет js для открытия меню

* Добавляет котов на фон

* Дорабатывает мелкие сетки

* Добавляет сетку для Живого примера

* Исправляет шапку, исправляет отступы для декстопа.

* Добавляет фоновые изображения, декор для подзаголовков.

* Подгоняет под pixel-perfect

--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -1,6 +1,12 @@
 .logo {
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color: #111111;
+
+  & picture {
+    display: contents;
+  }
 
   &:hover,
   &:focus {
@@ -12,9 +18,15 @@
   }
 }
 
-// .logo__image {
-// }
+.logo__image {
+  display: block;
 
-// .logo__text {
+  @media (min-width: $tablet-width) {
+    margin-right: 13px;
+  }
+}
 
-// }
+.logo__text {
+  display: block;
+  // padding: 0 13px;
+}
