--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,8 +14,8 @@
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
+@import "./blocks/index-header.scss";
 @import "./blocks/main-container.scss";
-@import "./blocks/hero.scss";
 @import "./blocks/category.scss";
 @import "./blocks/features.scss";
 @import "./blocks/live-example.scss";
@@ -28,3 +28,4 @@
 @import "./blocks/catalog-extra.scss";
 @import "./blocks/product.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/container.scss";
