--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,3 +1,4 @@
+$catalog-separator-color:#ebebeb;
 // .catalog {
 // }
 
@@ -5,7 +6,38 @@
   @include list();
   display: flex;
   flex-wrap: wrap;
+
+  @media (min-width: $tablet-width) {
+    max-width: $content-width-tablet;
+    margin-inline: auto;
+    gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: $content-width-desktop;
+    gap: 63px 80px;
+  }
+  border-collapse: collapse;
 }
 
-// .catalog__item {
-// }
+.catalog__item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid $catalog-separator-color;
+
+  &:last-of-type {
+    border-bottom: 1px solid $catalog-separator-color;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: unset;
+    border: none;
+  }
+}
+
+.catalog__item--more {
+  @media (min-width: $tablet-width) {
+    padding-top: 81px;
+  }
+}
