--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -1,42 +1,83 @@
-// .compare-slider {
-// }
+.compare-slider {
+  width: 280px;
+  height: 256px;
+  display: flex;
+  position: relative;
+  justify-items: center;
 
-// .compare-slider__image {
-// }
+  & picture {
+    display: contents;
+  }
 
-// .compare-slider__image--before {
-// }
+  @media (min-width: $tablet-width) {
+    width: 560px;
+    height: 512px;
+  }
+}
 
-// .compare-slider__image--after {
-// }
+.compare-slider__image {
+  display: block;
+  height: 100%;
 
-// .compare-slider__control {
-// }
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.compare-slider__image--before {
+  object-position: left;
+  justify-self: start;
+}
+
+.compare-slider__image--after {
+  object-position: right;
+  justify-self: end;
+}
 
 .compare-slider__control-button {
   --color: #{$icon-color};
+
   display: block;
+  height: 100%;
+  width: 4px;
   padding: 0;
   color: var(--color);
-  background-color: #ffffff;
-  border: 2px solid var(--color);
-  border-radius: 100%;
+  background-color: var(--color);
+  border: none;
+  border-radius: 2px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+
+  &::after {
+    @include icon-mask(24px,18px,"slider-control");
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color);
+    cursor: pointer;
+  }
 
   &::before {
-    @include icon-mask(40px,40px,"slider-control");
-    mask-size: 24px 18px;
-    background-color: var(--color);
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: $button-color;
+    border: 2px solid var(--color);
+    border-radius: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
   }
 
-  &:hover {
-    --color: #{$icon-color-hover};
-  }
-
+  &:hover,
   &:focus-visible {
     --color: #{$icon-color-hover};
-    outline-color: var(--color);
   }
-
 
   &:active {
     --color: #{$icon-color-active};
