--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -15,7 +15,7 @@
   line-height: 18px;
   text-align: left;
 
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 1.5em;
   }
@@ -60,4 +60,18 @@
 
 @mixin icon-mask-image($id) {
   mask-image: url("../../icons/stack.svg#"+$id);
+}
+
+@mixin container() {
+  width: $content-width-mobile;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: $tablet-width) {
+    width: $content-width-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: $content-width-desktop;
+  }
 }
