--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,6 +1,15 @@
 /* здесь используйте глобальные переменные */
-$font-primary: "Oswald", sans-serif;
-$font-secondary: "Lato", sans-serif;
+$font-primary: "Oswald", "Arial", sans-serif;
+$font-secondary: "Lato", "Arial", sans-serif;
+
+$tablet-width: 768px;
+$mobile-width-max: calc($tablet-width - 1px);
+$desktop-width: 1440px;
+$tablet-width-max: calc($desktop-width - 1px);
+
+$content-width-mobile: 280px;
+$content-width-tablet: 708px;
+$content-width-desktop: 1220px;
 
 $text-color: #000000;
 $text-secondary-color:#444444;
@@ -31,8 +40,12 @@ $card-title-secondary-color:#111111;
 
 $icon-color:#666666;
 $icon-color-hover:#68b738;
-$icon-color-active:rgba(#68b738, 0.3);
+$icon-color-active:rgba(#68b738, 0.6);
 
+$input-border: #cdcdcd;
+
+$separator-color:#d9d9d9;
+$separator-border: 1px solid $separator-color;
 
 // $basic-green: #68b738;
 // $basic-grey: #f2f2f2;
